kube/apps/pihole/ingress.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: pihole-gateway
  namespace: pihole
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-acme-issuer
spec:
  gatewayClassName: traefik
  listeners:
    - name: websecure
      protocol: HTTPS
      hostname: "pihole.kube.metalnet.org"
      port: 8443
      allowedRoutes:
        namespaces:
          from: Same
      tls:
        mode: Terminate
        certificateRefs:
          - name: pihole-kube-metalnet-org-tls
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pihole-http-route
  namespace: pihole
  annotations:
    gethomepage.dev/href: "https://pihole.kube.metalnet.org"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Infrastructure
    gethomepage.dev/name: Pi-hole
    gethomepage.dev/app: pihole
    uptime-kuma.io/monitor: "true"
spec:
  parentRefs:
    - name: pihole-gateway
      namespace: pihole
      sectionName: websecure
  hostnames:
    - "pihole.kube.metalnet.org"
  rules:
    - backendRefs:
        - name: pihole-web
          port: 80
          kind: Service
          group: ""
      matches:
        - path:
            type: PathPrefix
            value: /
